# winfocus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.cpp  x11_windows.cpp  x11_windows.h
